2006-04-21  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick autogen.sh fix of project name
	* Added Enabled checkbox to alarm config - enables/disables the alarm
	* Clean up AlarmConfigPage text formatting
	* AlarmConfigPage - don't do debug outputs (open GNOME Config Editor if you need this)
	* VolumeFade - debug a bit more, compare final volume to internal variable and not buggy PlayerEngineCore.Volume
	
2006-04-19  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick fix - VolumeFade was not working due to PlayerEngineCore.Volume not updating itself fast enough.  Fixed!

2006-04-13  Patrick van Staveren  <trick@vanstaveren.us>
	* Quick bugfix - require banshee 0.10.8 in configure.ac - due to PlayerEngineCore changes that were introduced in 0.10.8.

2006-04-12  Patrick van Staveren  <trick@vanstaveren.us>
	* VolumeFade now uses GLib timer, so it is a non-blocking call.
	* Sleep Timer now calls volume fade and fades out current song first.
	* UI: Alarm now has Volume sliders, and is cleaner.  Getting ready to move volume adjust to plugin config page.
	* Updated TODO and BUGS files with some changes.
	* Wrote a simple README.

2006-04-11  Patrick van Staveren  <trick@vanstaveren.us>
	* Code structure changes - SleepTimerConfigDialog branched out of Plugin.cs
	* lots of RANDOM cleanups
	* Stock OK buttons
	* Load menu inserts after UI initializes (take advantage of newer override)

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>
	* Volume fade is it's own class, and works in either direction.  Much cleaner looking.
	* Got rid of annoying popup when disabling plugin

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>
	* Volume fade in simplified, scaled to the volume slider's resolution, and yeah, it works :)
	* removed some unnecessary this.xxx occurances

2006-04-10  Patrick van Staveren  <trick@vanstaveren.us>

	* Quick fix on dialog
	* Don't try to pause with sleep timer unless we're playing
