@@ -2,12 +2,10 @@ Global:
 	* UI love
 		* volumes - sliders!  live volume check.
 		* Menu items - check box next to when enabled.
-	* Consider putting alarm/sleep set windows into dialogs, so the wm will center them in the app?
+	* Put alarm/sleep settings into dialogs, so the wm will center them in the app.  This is a must.
 
 Sleep Timer:
 	* Evaluate sleep timer fade out - is this what we want?  It fades out till the end of track, and then pauses.
-	* Uses GLib timer - is this smart?
-	* Write sleep time to gconf and resume on startup?  would this defeat the purpose as the time will not be preserved?
 	* Split some stuff into other files - make Plugin.cs shorter
 
 Alarm:
