@@ -1,66 +1,69 @@
 using System;
 using System.Threading;
+using System.Diagnostics;
 
 using Banshee.Base;
 using Banshee.MediaEngine;
 
 namespace Banshee.Plugins.Alarm
 {
-    public class AlarmThread
-    {
-    	private bool isInAlarmMinute = false; // what a dirty hack :(
-    	private AlarmPlugin plugin;
-        
-        public AlarmThread(AlarmPlugin plugin)
-        {
-        	this.plugin = plugin;
-        }
-        
-        public void MainLoop()
-        {
-        	try
-        	{
-        		while(true)
-        		{
-        			Thread.Sleep(1000);
-        			
-        			DateTime now = DateTime.Now;
-        			
-        			if (now.Hour == plugin.AlarmHour && now.Minute == plugin.AlarmMinute && plugin.AlarmEnabled)
-        			{
-        				this.StartPlaying();
-        				isInAlarmMinute = true;
-        			}else{
-        				isInAlarmMinute = false;
-        			}
-        			
-        		}
-        	}
-        	catch (ThreadAbortException tex)
-        	{
-        		LogCore.Instance.PushDebug("Alarm main loop aborted", "");
-        	}
-        }
-        
-        private void StartPlaying()
-        {
-        	if (PlayerEngineCore.CurrentState == PlayerEngineState.Playing || isInAlarmMinute)
-        	{
-        		return;
-        	}
-        	
-        	LogCore.Instance.PushDebug("Start playing ", "");
-        	
-        	if (this.plugin.FadeDuration > 0)
-        	{
-        		PlayerEngineCore.Volume = plugin.FadeStartVolume;
-        		PlayerEngineCore.Play();
-        		
-        		new VolumeFade(plugin.FadeStartVolume, plugin.FadeEndVolume, plugin.FadeDuration);
-        	}else{
-        		// No fade
-        		PlayerEngineCore.Play();
-        	}
-        }
-    }
+	public class AlarmThread
+	{
+		private bool isInAlarmMinute = false; // what a dirty hack :(
+		private AlarmPlugin plugin;
+
+		public AlarmThread(AlarmPlugin plugin)
+		{
+			this.plugin = plugin;
+		}
+
+		public void MainLoop()
+		{
+			try
+			{
+				while(true)
+				{
+					Thread.Sleep(1000);
+					DateTime now = DateTime.Now;
+
+					if (now.Hour == plugin.AlarmHour && now.Minute == plugin.AlarmMinute && plugin.AlarmEnabled)
+					{
+						this.StartPlaying();
+						isInAlarmMinute = true;
+					}else{
+						isInAlarmMinute = false;
+					}
+				}
+			}
+			catch (ThreadAbortException tex)
+			{
+				LogCore.Instance.PushDebug("Alarm Plugin: Alarm main loop aborted", "");
+			}
+		}
+
+		private void StartPlaying()
+		{
+			if (PlayerEngineCore.CurrentState == PlayerEngineState.Playing || isInAlarmMinute)
+			{
+				return;
+			}
+
+			LogCore.Instance.PushDebug("Alarm Plugin: Start playing ", "");
+
+			if (this.plugin.FadeDuration > 0) {
+				PlayerEngineCore.Volume = plugin.FadeStartVolume;
+				new VolumeFade(plugin.FadeStartVolume, plugin.FadeEndVolume, plugin.FadeDuration);
+			}
+			PlayerEngineCore.Play();
+			//string command = "/bin/ls /tmp";
+			
+            //Process myproc = new Process();
+            /*myproc = */
+            
+            
+            if(plugin.AlarmCommand.Trim() != "")
+                Process.Start(plugin.AlarmCommand);
+
+		}
+	}
 }
